<resources>
    <string name="app_name">FarmatodoAnime</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Atras</string>

    <string name="popularList">Top 10 Populares!</string>
    <string name="popularRecent">Populares en emisión!</string>

    <string name="homeTitle">Inicio</string>
    <string name="searchTitle">Busqueda</string>
    <string name="search">Buscar</string>
    <string name="url">https://w7.pngwing.com/pngs/658/622/png-transparent-page-not-found-illustration.png</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="proximamente">En camino</string>
    <string name="finalizado">Finalizado</string>
    <string name="en_transmision">En emisión</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="no_se_encontraron_resultados">No se encontraron resultados</string>
</resources>